horizontal overflow solved

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-body {
+
+
+html,body {
   background: #fff;
   color: #666666;
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 a {
